--- a/email_test_obje.Rmd
+++ b/email_test_obje.Rmd
@@ -1,14 +1,9 @@
 ---
 title: "Falha no(s) senso(res)"
-output: 
-  html_document: 
-    self_contained: no
-    theme: null
-    highlight: null
-    mathjax: null
-    css: ink.css
-
+format: blastula::blastula_email
+editor: visual
 ---
+
 
 
 ```{r echo=FALSE, message=FALSE}
